--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@11ty/eleventy-img": "^0.5.0",
     "clean-css": "^5.0.1",
     "dotenv": "^8.2.0",
+    "markdown-it-anchor": "^7.0.2",
     "striptags": "^3.1.1"
   },
   "devDependencies": {}
