--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@11ty/eleventy": "^0.11.1",
     "@11ty/eleventy-cache-assets": "^2.0.3",
     "@11ty/eleventy-img": "^0.5.0",
+    "@11ty/eleventy-plugin-rss": "^1.1.0",
     "clean-css": "^5.0.1",
     "dotenv": "^8.2.0",
     "markdown-it-anchor": "^7.0.2",
