Switch back to original Portway env var names 😂

--- a/.env.dist
+++ b/.env.dist
@@ -1,8 +1,5 @@
-PORTWAY_POSTS_ID=
-PORTWAY_POSTS_KEY=
-
-PORTWAY_PAGES_ID=
-PORTWAY_PAGES_KEY=
+PORTWAY_PROJECT_ID=
+PORTWAY_API_KEY=
 
 PORTWAY_SHOW_DRAFTS=true
 PORTWAY_SHOW_EDIT_LINK=false
